--- a/src/app/mainpanel/mainpanel.component.html
+++ b/src/app/mainpanel/mainpanel.component.html
@@ -85,18 +85,39 @@
                     </div>
                 </div>
             </div>
+            <div class="row mainNotificationPanel" *ngIf="commonService.orderComplete">
+                <div style="display:inline-flex;width: 100%;justify-content: center;">
+                    <h6>Order Completed!!</h6>
+                    <i class="fa fa-times-circle fa-2x crossButton" (click)="commonService.orderComplete=false;" style="    position: absolute;
+                    top: 25px;"></i>
+                </div>
+                <div class="notificationPanelAll">
+                    <div class="notificationPanel" *ngFor="let notify of commonService.orderCompletedData">
+                        <div class="row">
+                            <div class="ui-md-2" style="margin: auto;padding:5px;">
+                                <img src="../../assets/img/food.png" alt="food" style="width:100%;">
+                            </div>
+                            <div class="ui-md-10" style="padding:5px;">
+                                <div class="row">
+                                    Item : {{notify.name}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <div class="row">
     <div class="ui-md-2">
-        <div class="row subPanelHeader" (click)="redirectToPortal('order')" [ngClass]="{'selected':tabSelected.order,'unselected':tabSelected.order}">
+        <div class="row subPanelHeader" id="orders" (click)="redirectToPortal('order')" [ngClass]="{'selected':tabSelected.order,'unselected':tabSelected.order}">
             Orders
         </div>
-        <div class="row subPanelHeader" (click)="redirectToPortal('predicted')" [ngClass]="{'selected':tabSelected.predicted,'unselected':tabSelected.predicted}">
+        <div class="row subPanelHeader" id="predicted" (click)="redirectToPortal('predicted')" [ngClass]="{'selected':tabSelected.predicted,'unselected':tabSelected.predicted}">
             Predicted
         </div>
-        <div class="row subPanelHeader" (click)="redirectToPortal('kitchen')" [ngClass]="{'selected':tabSelected.kitchen,'unselected':tabSelected.kitchen}">
+        <div class="row subPanelHeader" id="kitchen" (click)="redirectToPortal('kitchen')" [ngClass]="{'selected':tabSelected.kitchen,'unselected':tabSelected.kitchen}">
             Kitchen
         </div>
     </div>
